docs: update thesis

--- a/references.bib
+++ b/references.bib
@@ -1,4 +1,300 @@
 
+@article{mullis_specific_1986,
+	title = {Specific enzymatic amplification of {DNA} in vitro: the polymerase chain reaction},
+	volume = {51 Pt 1},
+	issn = {0091-7451},
+	shorttitle = {Specific enzymatic amplification of {DNA} in vitro},
+	doi = {10.1101/sqb.1986.051.01.032},
+	language = {eng},
+	journal = {Cold Spring Harbor Symposia on Quantitative Biology},
+	author = {Mullis, K. and Faloona, F. and Scharf, S. and Saiki, R. and Horn, G. and Erlich, H.},
+	year = {1986},
+	pmid = {3472723},
+	keywords = {Alleles, Base Sequence, Cell Line, Cloning, Molecular, DNA, DNA-Directed DNA Polymerase, Genes, Humans, Templates, Genetic},
+	pages = {263--273},
+}
+
+@article{saiki_enzymatic_1985,
+	title = {Enzymatic amplification of beta-globin genomic sequences and restriction site analysis for diagnosis of sickle cell anemia},
+	volume = {230},
+	issn = {0036-8075},
+	doi = {10.1126/science.2999980},
+	abstract = {Two new methods were used to establish a rapid and highly sensitive prenatal diagnostic test for sickle cell anemia. The first involves the primer-mediated enzymatic amplification of specific beta-globin target sequences in genomic DNA, resulting in the exponential increase (220,000 times) of target DNA copies. In the second technique, the presence of the beta A and beta S alleles is determined by restriction endonuclease digestion of an end-labeled oligonucleotide probe hybridized in solution to the amplified beta-globin sequences. The beta-globin genotype can be determined in less than 1 day on samples containing significantly less than 1 microgram of genomic DNA.},
+	language = {eng},
+	number = {4732},
+	journal = {Science (New York, N.Y.)},
+	author = {Saiki, R. K. and Scharf, S. and Faloona, F. and Mullis, K. B. and Horn, G. T. and Erlich, H. A. and Arnheim, N.},
+	month = dec,
+	year = {1985},
+	pmid = {2999980},
+	keywords = {Alleles, Anemia, Sickle Cell, Base Sequence, Clinical Laboratory Techniques, DNA Restriction Enzymes, DNA-Directed DNA Polymerase, Escherichia coli, Gene Amplification, Globins, Humans, Nucleic Acid Hybridization, Polymorphism, Genetic},
+	pages = {1350--1354},
+}
+
+@misc{noauthor_nobel_nodate,
+	title = {The {Nobel} {Prize} in {Chemistry} 1993},
+	url = {https://www.nobelprize.org/prizes/chemistry/1993/press-release/},
+	abstract = {The Nobel Prize in Chemistry 1993 was awarded "for contributions to the developments of methods within DNA-based chemistry" jointly with one half to Kary B. Mullis "for his invention of the polymerase chain reaction (PCR) method" and with one half to Michael Smith "for his fundamental contributions to the establishment of oligonucleotide-based, site-directed mutagenesis and its development for protein studies"},
+	language = {en-US},
+	urldate = {2023-06-11},
+	journal = {NobelPrize.org},
+}
+
+@article{wang_rna-seq_2009,
+	title = {{RNA}-{Seq}: a revolutionary tool for transcriptomics},
+	volume = {10},
+	issn = {1471-0056},
+	shorttitle = {{RNA}-{Seq}},
+	url = {https://www.ncbi.nlm.nih.gov/pmc/articles/PMC2949280/},
+	doi = {10.1038/nrg2484},
+	abstract = {RNA-Seq is a recently developed approach to transcriptome profiling that uses deep-sequencing technologies. Studies using this method have already altered our view of the extent and complexity of eukaryotic transcriptomes. RNA-Seq also provides a far more precise measurement of levels of transcripts and their isoforms than other methods. This article describes the RNA-Seq approach, the challenges associated with its application, and the advances made so far in characterizing several eukaryote transcriptomes.},
+	number = {1},
+	urldate = {2023-06-11},
+	journal = {Nature reviews. Genetics},
+	author = {Wang, Zhong and Gerstein, Mark and Snyder, Michael},
+	month = jan,
+	year = {2009},
+	pmid = {19015660},
+	pmcid = {PMC2949280},
+	pages = {57--63},
+}
+
+@article{jain_oxford_2016,
+	title = {The {Oxford} {Nanopore} {MinION}: delivery of nanopore sequencing to the genomics community},
+	volume = {17},
+	issn = {1474-760X},
+	shorttitle = {The {Oxford} {Nanopore} {MinION}},
+	url = {https://doi.org/10.1186/s13059-016-1103-0},
+	doi = {10.1186/s13059-016-1103-0},
+	abstract = {Nanopore DNA strand sequencing has emerged as a competitive, portable technology. Reads exceeding 150 kilobases have been achieved, as have in-field detection and analysis of clinical pathogens. We summarize key technical features of the Oxford Nanopore MinION, the dominant platform currently available. We then discuss pioneering applications executed by the genomics community.},
+	number = {1},
+	urldate = {2023-06-11},
+	journal = {Genome Biology},
+	author = {Jain, Miten and Olsen, Hugh E. and Paten, Benedict and Akeson, Mark},
+	month = nov,
+	year = {2016},
+	keywords = {Hierarchical Dirichlet Process, International Space Station, Next Generation Sequencing Platform, Read Accuracy, Rolling Circle Amplification},
+	pages = {239},
+}
+
+@article{bentley_accurate_2008,
+	title = {Accurate whole human genome sequencing using reversible terminator chemistry},
+	volume = {456},
+	copyright = {2008 The Author(s)},
+	issn = {1476-4687},
+	url = {https://www.nature.com/articles/nature07517},
+	doi = {10.1038/nature07517},
+	abstract = {DNA sequence information underpins genetic research, enabling discoveries of important biological or medical benefit. Sequencing projects have traditionally used long (400–800 base pair) reads, but the existence of reference sequences for the human and many other genomes makes it possible to develop new, fast approaches to re-sequencing, whereby shorter reads are compared to a reference to identify intraspecies genetic variation. Here we report an approach that generates several billion bases of accurate nucleotide sequence per experiment at low cost. Single molecules of DNA are attached to a flat surface, amplified in situ and used as templates for synthetic sequencing with fluorescent reversible terminator deoxyribonucleotides. Images of the surface are analysed to generate high-quality sequence. We demonstrate application of this approach to human genome sequencing on flow-sorted X chromosomes and then scale the approach to determine the genome sequence of a male Yoruba from Ibadan, Nigeria. We build an accurate consensus sequence from {\textgreater}30× average depth of paired 35-base reads. We characterize four million single-nucleotide polymorphisms and four hundred thousand structural variants, many of which were previously unknown. Our approach is effective for accurate, rapid and economical whole-genome re-sequencing and many other biomedical applications.},
+	language = {en},
+	number = {7218},
+	urldate = {2023-06-11},
+	journal = {Nature},
+	author = {Bentley, David R. and Balasubramanian, Shankar and Swerdlow, Harold P. and Smith, Geoffrey P. and Milton, John and Brown, Clive G. and Hall, Kevin P. and Evers, Dirk J. and Barnes, Colin L. and Bignell, Helen R. and Boutell, Jonathan M. and Bryant, Jason and Carter, Richard J. and Keira Cheetham, R. and Cox, Anthony J. and Ellis, Darren J. and Flatbush, Michael R. and Gormley, Niall A. and Humphray, Sean J. and Irving, Leslie J. and Karbelashvili, Mirian S. and Kirk, Scott M. and Li, Heng and Liu, Xiaohai and Maisinger, Klaus S. and Murray, Lisa J. and Obradovic, Bojan and Ost, Tobias and Parkinson, Michael L. and Pratt, Mark R. and Rasolonjatovo, Isabelle M. J. and Reed, Mark T. and Rigatti, Roberto and Rodighiero, Chiara and Ross, Mark T. and Sabot, Andrea and Sankar, Subramanian V. and Scally, Aylwyn and Schroth, Gary P. and Smith, Mark E. and Smith, Vincent P. and Spiridou, Anastassia and Torrance, Peta E. and Tzonev, Svilen S. and Vermaas, Eric H. and Walter, Klaudia and Wu, Xiaolin and Zhang, Lu and Alam, Mohammed D. and Anastasi, Carole and Aniebo, Ify C. and Bailey, David M. D. and Bancarz, Iain R. and Banerjee, Saibal and Barbour, Selena G. and Baybayan, Primo A. and Benoit, Vincent A. and Benson, Kevin F. and Bevis, Claire and Black, Phillip J. and Boodhun, Asha and Brennan, Joe S. and Bridgham, John A. and Brown, Rob C. and Brown, Andrew A. and Buermann, Dale H. and Bundu, Abass A. and Burrows, James C. and Carter, Nigel P. and Castillo, Nestor and Chiara E. Catenazzi, Maria and Chang, Simon and Neil Cooley, R. and Crake, Natasha R. and Dada, Olubunmi O. and Diakoumakos, Konstantinos D. and Dominguez-Fernandez, Belen and Earnshaw, David J. and Egbujor, Ugonna C. and Elmore, David W. and Etchin, Sergey S. and Ewan, Mark R. and Fedurco, Milan and Fraser, Louise J. and Fuentes Fajardo, Karin V. and Scott Furey, W. and George, David and Gietzen, Kimberley J. and Goddard, Colin P. and Golda, George S. and Granieri, Philip A. and Green, David E. and Gustafson, David L. and Hansen, Nancy F. and Harnish, Kevin and Haudenschild, Christian D. and Heyer, Narinder I. and Hims, Matthew M. and Ho, Johnny T. and Horgan, Adrian M. and Hoschler, Katya and Hurwitz, Steve and Ivanov, Denis V. and Johnson, Maria Q. and James, Terena and Huw Jones, T. A. and Kang, Gyoung-Dong and Kerelska, Tzvetana H. and Kersey, Alan D. and Khrebtukova, Irina and Kindwall, Alex P. and Kingsbury, Zoya and Kokko-Gonzales, Paula I. and Kumar, Anil and Laurent, Marc A. and Lawley, Cynthia T. and Lee, Sarah E. and Lee, Xavier and Liao, Arnold K. and Loch, Jennifer A. and Lok, Mitch and Luo, Shujun and Mammen, Radhika M. and Martin, John W. and McCauley, Patrick G. and McNitt, Paul and Mehta, Parul and Moon, Keith W. and Mullens, Joe W. and Newington, Taksina and Ning, Zemin and Ling Ng, Bee and Novo, Sonia M. and O’Neill, Michael J. and Osborne, Mark A. and Osnowski, Andrew and Ostadan, Omead and Paraschos, Lambros L. and Pickering, Lea and Pike, Andrew C. and Pike, Alger C. and Chris Pinkard, D. and Pliskin, Daniel P. and Podhasky, Joe and Quijano, Victor J. and Raczy, Come and Rae, Vicki H. and Rawlings, Stephen R. and Chiva Rodriguez, Ana and Roe, Phyllida M. and Rogers, John and Rogert Bacigalupo, Maria C. and Romanov, Nikolai and Romieu, Anthony and Roth, Rithy K. and Rourke, Natalie J. and Ruediger, Silke T. and Rusman, Eli and Sanches-Kuiper, Raquel M. and Schenker, Martin R. and Seoane, Josefina M. and Shaw, Richard J. and Shiver, Mitch K. and Short, Steven W. and Sizto, Ning L. and Sluis, Johannes P. and Smith, Melanie A. and Ernest Sohna Sohna, Jean and Spence, Eric J. and Stevens, Kim and Sutton, Neil and Szajkowski, Lukasz and Tregidgo, Carolyn L. and Turcatti, Gerardo and vandeVondele, Stephanie and Verhovsky, Yuli and Virk, Selene M. and Wakelin, Suzanne and Walcott, Gregory C. and Wang, Jingwen and Worsley, Graham J. and Yan, Juying and Yau, Ling and Zuerlein, Mike and Rogers, Jane and Mullikin, James C. and Hurles, Matthew E. and McCooke, Nick J. and West, John S. and Oaks, Frank L. and Lundberg, Peter L. and Klenerman, David and Durbin, Richard and Smith, Anthony J.},
+	month = nov,
+	year = {2008},
+	keywords = {Humanities and Social Sciences, Science, multidisciplinary},
+	pages = {53--59},
+}
+
+@article{whiteside_tumor_2008,
+	title = {The tumor microenvironment and its role in promoting tumor growth},
+	volume = {27},
+	issn = {0950-9232},
+	url = {https://www.ncbi.nlm.nih.gov/pmc/articles/PMC3689267/},
+	doi = {10.1038/onc.2008.271},
+	abstract = {The tumor microenvironment is created by the tumor and dominated by tumor-induced interactions. Although various immune effector cells are recruited to the tumor site, their anti-tumor functions are downregulated, largely in response to tumor-derived signals. Infiltrates of inflammatory cells present in human tumors are chronic in nature and are enriched in regulatory T cells (Treg) as well as myeloid suppressor cells (MSC). Immune cells in the tumor microenvironment not only fail to exercise anti-tumor effector functions, but they are co-opted to promote tumor growth. Sustained activation of the NF-κB pathway in the tumor milieu represents one mechanism that appears to favor tumor survival and drive abortive activation of immune cells. The result is tumor escape from the host immune system. Tumor escape is accomplished through the activation of one or several molecular mechanisms that lead to inhibition of immune cell functions or to apoptosis of anti-tumor effector cells. The ability to block tumor escape depends on a better understanding of cellular and molecular pathways operating in the tumor microenvironment. Novel therapeutic strategies that emerge are designed to change the pro-tumor microenvironment to one favoring acute responses and potent anti-tumor activity.},
+	number = {45},
+	urldate = {2023-06-11},
+	journal = {Oncogene},
+	author = {Whiteside, TL},
+	month = oct,
+	year = {2008},
+	pmid = {18836471},
+	pmcid = {PMC3689267},
+	pages = {5904--5912},
+}
+
+@article{walsh_genomic_2016,
+	title = {Genomic {Biomarkers} for {Breast} {Cancer} {Risk}},
+	volume = {882},
+	issn = {0065-2598},
+	url = {https://www.ncbi.nlm.nih.gov/pmc/articles/PMC5016023/},
+	doi = {10.1007/978-3-319-22909-6_1},
+	abstract = {Clinical risk assessment for cancer predisposition includes a three-generation pedigree and physical examination to identify inherited syndromes. Additionally genetic and genomic biomarkers may identify individuals with a constitutional basis for their disease that may not be evident clinically. Genomic biomarker testing may detect molecular variations in single genes, panels of genes, or entire genomes. The strength of evidence for the association of a genomic biomarker with disease risk may be weak or strong. The factors contributing to clinical validity and utility of genomic biomarkers include functional laboratory analyses and genetic epidemiologic evidence. Genomic biomarkers may be further classified as low, moderate or highly penetrant based on the likelihood of disease. Genomic biomarkers for breast cancer are comprised of rare highly penetrant mutations of genes such as BRCA1 or BRCA2, moderately penetrant mutations of genes such as CHEK2, as well as more common genomic variants, including single nucleotide polymorphisms, associated with modest effect sizes. When applied in the context of appropriate counseling and interpretation, identification of genomic biomarkers of inherited risk for breast cancer may decrease morbidity and mortality, allow for definitive prevention through assisted reproduction, and serve as a guide to targeted therapy.},
+	urldate = {2023-06-11},
+	journal = {Advances in experimental medicine and biology},
+	author = {Walsh, Michael F. and Nathanson, Katherine L. and Couch, Fergus J. and Offit, Kenneth},
+	year = {2016},
+	pmid = {26987529},
+	pmcid = {PMC5016023},
+	pages = {1--32},
+}
+
+@article{smith_biomarkers_2003,
+	title = {Biomarkers in {Imaging}: {Realizing} {Radiology}’s {Future}},
+	volume = {227},
+	issn = {0033-8419},
+	shorttitle = {Biomarkers in {Imaging}},
+	url = {https://pubs.rsna.org/doi/10.1148/radiol.2273020518},
+	doi = {10.1148/radiol.2273020518},
+	abstract = {Modern pharmaceuticals and medical devices have provided substantial benefits to patients throughout the world. These benefits come at a high and increasing cost, with development of the typical pharmaceutical requiring 12 years and hundreds of millions of dollars before gaining U.S. Food and Drug Administration marketing approval. Appropriate use of imaging biomarkers—defined as anatomic, physiologic, biochemical, or molecular parameters detectable with imaging methods used to establish the presence or severity of disease—offer the prospect of smaller, less expensive, and more efficient preclinical studies and clinical trials. Scientists, government regulators, and industry have all recognized the potential of biomarkers in imaging. Although real, this promise can only be realized with the rigorous application of science to their use. Success is most likely when (a) the presence of an imaging marker is closely linked with the presence of a target disease; (b) detection and/or measurement of the biomarker is accurate, reproducible, and feasible over time; and (c) measured changes are closely linked to success or failure of the therapeutic effect of the product being evaluated. By applying this paradigm to the array of imaging modalities, the radiology community is poised to become a major force in preclinical and clinical evaluations of new medical treatments.
+
+© RSNA, 2003},
+	number = {3},
+	urldate = {2023-06-11},
+	journal = {Radiology},
+	author = {Smith, John J. and Sorensen, A. Gregory and Thrall, James H.},
+	month = jun,
+	year = {2003},
+	pages = {633--638},
+}
+
+@article{doroshow_pd-l1_2021,
+	title = {{PD}-{L1} as a biomarker of response to immune-checkpoint inhibitors},
+	volume = {18},
+	copyright = {2021 Springer Nature Limited},
+	issn = {1759-4782},
+	url = {https://www.nature.com/articles/s41571-021-00473-5},
+	doi = {10.1038/s41571-021-00473-5},
+	abstract = {Immune-checkpoint inhibitors targeting PD-1 or PD-L1 have already substantially improved the outcomes of patients with many types of cancer, although only 20–40\% of patients derive benefit from these new therapies. PD-L1, quantified using immunohistochemistry assays, is currently the most widely validated, used and accepted biomarker to guide the selection of patients to receive anti-PD-1 or anti-PD-L1 antibodies. However, many challenges remain in the clinical use of these assays, including the necessity of using different companion diagnostic assays for specific agents, high levels of inter-assay variability in terms of both performance and cut-off points, and a lack of prospective comparisons of how PD-L1+ disease diagnosed using each assay relates to clinical outcomes. In this Review, we describe the current role of PD-L1 immunohistochemistry assays used to inform the selection of patients to receive anti-PD-1 or anti-PD-L1 antibodies, we discuss the various technical and clinical challenges associated with these assays, including regulatory issues, and we provide some perspective on how to optimize PD-L1 as a selection biomarker for the future treatment of patients with solid tumours.},
+	language = {en},
+	number = {6},
+	urldate = {2023-06-11},
+	journal = {Nature Reviews Clinical Oncology},
+	author = {Doroshow, Deborah Blythe and Bhalla, Sheena and Beasley, Mary Beth and Sholl, Lynette M. and Kerr, Keith M. and Gnjatic, Sacha and Wistuba, Ignacio I. and Rimm, David L. and Tsao, Ming Sound and Hirsch, Fred R.},
+	month = jun,
+	year = {2021},
+	keywords = {Cancer immunotherapy, Non-small-cell lung cancer, Pathology, Tumour biomarkers},
+	pages = {345--362},
+}
+
+@article{avsec_effective_2021,
+	title = {Effective gene expression prediction from sequence by integrating long-range interactions},
+	volume = {18},
+	copyright = {2021 The Author(s)},
+	issn = {1548-7105},
+	url = {https://www.nature.com/articles/s41592-021-01252-x},
+	doi = {10.1038/s41592-021-01252-x},
+	abstract = {How noncoding DNA determines gene expression in different cell types is a major unsolved problem, and critical downstream applications in human genetics depend on improved solutions. Here, we report substantially improved gene expression prediction accuracy from DNA sequences through the use of a deep learning architecture, called Enformer, that is able to integrate information from long-range interactions (up to 100 kb away) in the genome. This improvement yielded more accurate variant effect predictions on gene expression for both natural genetic variants and saturation mutagenesis measured by massively parallel reporter assays. Furthermore, Enformer learned to predict enhancer–promoter interactions directly from the DNA sequence competitively with methods that take direct experimental data as input. We expect that these advances will enable more effective fine-mapping of human disease associations and provide a framework to interpret cis-regulatory evolution.},
+	language = {en},
+	number = {10},
+	urldate = {2023-06-11},
+	journal = {Nature Methods},
+	author = {Avsec, Ziga and Agarwal, Vikram and Visentin, Daniel and Ledsam, Joseph R. and Grabska-Barwinska, Agnieszka and Taylor, Kyle R. and Assael, Yannis and Jumper, John and Kohli, Pushmeet and Kelley, David R.},
+	month = oct,
+	year = {2021},
+	keywords = {Gene expression, Machine learning, Software, Transcriptomics},
+	pages = {1196--1203},
+}
+
+@article{qiu_small_2023,
+	title = {Small molecule metabolites: discovery of biomarkers and therapeutic targets},
+	volume = {8},
+	copyright = {2023 The Author(s)},
+	issn = {2059-3635},
+	shorttitle = {Small molecule metabolites},
+	url = {https://www.nature.com/articles/s41392-023-01399-3},
+	doi = {10.1038/s41392-023-01399-3},
+	abstract = {Metabolic abnormalities lead to the dysfunction of metabolic pathways and metabolite accumulation or deficiency which is well-recognized hallmarks of diseases. Metabolite signatures that have close proximity to subject’s phenotypic informative dimension, are useful for predicting diagnosis and prognosis of diseases as well as monitoring treatments. The lack of early biomarkers could lead to poor diagnosis and serious outcomes. Therefore, noninvasive diagnosis and monitoring methods with high specificity and selectivity are desperately needed. Small molecule metabolites-based metabolomics has become a specialized tool for metabolic biomarker and pathway analysis, for revealing possible mechanisms of human various diseases and deciphering therapeutic potentials. It could help identify functional biomarkers related to phenotypic variation and delineate biochemical pathways changes as early indicators of pathological dysfunction and damage prior to disease development. Recently, scientists have established a large number of metabolic profiles to reveal the underlying mechanisms and metabolic networks for therapeutic target exploration in biomedicine. This review summarized the metabolic analysis on the potential value of small-molecule candidate metabolites as biomarkers with clinical events, which may lead to better diagnosis, prognosis, drug screening and treatment. We also discuss challenges that need to be addressed to fuel the next wave of breakthroughs.},
+	language = {en},
+	number = {1},
+	urldate = {2023-06-11},
+	journal = {Signal Transduction and Targeted Therapy},
+	author = {Qiu, Shi and Cai, Ying and Yao, Hong and Lin, Chunsheng and Xie, Yiqiang and Tang, Songqi and Zhang, Aihua},
+	month = mar,
+	year = {2023},
+	keywords = {Drug screening, Structural biology, Target identification},
+	pages = {1--37},
+}
+
+@article{tran_deep_2021,
+	title = {Deep learning in cancer diagnosis, prognosis and treatment selection},
+	volume = {13},
+	issn = {1756-994X},
+	url = {https://doi.org/10.1186/s13073-021-00968-x},
+	doi = {10.1186/s13073-021-00968-x},
+	abstract = {Deep learning is a subdiscipline of artificial intelligence that uses a machine learning technique called artificial neural networks to extract patterns and make predictions from large data sets. The increasing adoption of deep learning across healthcare domains together with the availability of highly characterised cancer datasets has accelerated research into the utility of deep learning in the analysis of the complex biology of cancer. While early results are promising, this is a rapidly evolving field with new knowledge emerging in both cancer biology and deep learning. In this review, we provide an overview of emerging deep learning techniques and how they are being applied to oncology. We focus on the deep learning applications for omics data types, including genomic, methylation and transcriptomic data, as well as histopathology-based genomic inference, and provide perspectives on how the different data types can be integrated to develop decision support tools. We provide specific examples of how deep learning may be applied in cancer diagnosis, prognosis and treatment management. We also assess the current limitations and challenges for the application of deep learning in precision oncology, including the lack of phenotypically rich data and the need for more explainable deep learning models. Finally, we conclude with a discussion of how current obstacles can be overcome to enable future clinical utilisation of deep learning.},
+	number = {1},
+	urldate = {2023-06-11},
+	journal = {Genome Medicine},
+	author = {Tran, Khoa A. and Kondrashova, Olga and Bradley, Andrew and Williams, Elizabeth D. and Pearson, John V. and Waddell, Nicola},
+	month = sep,
+	year = {2021},
+	keywords = {Artificial intelligence, Cancer genomics, Cancer of unknown primary, Deep learning, Explainability, Molecular subtypes, Multi-modal learning, Pharmacogenomics, Precision oncology, Prognosis, Tumour microenvironment},
+	pages = {152},
+}
+
+@article{huang_applications_2018,
+	title = {Applications of {Support} {Vector} {Machine} ({SVM}) {Learning} in {Cancer} {Genomics}},
+	volume = {15},
+	issn = {1790-6245},
+	doi = {10.21873/cgp.20063},
+	abstract = {Machine learning with maximization (support) of separating margin (vector), called support vector machine (SVM) learning, is a powerful classification tool that has been used for cancer genomic classification or subtyping. Today, as advancements in high-throughput technologies lead to production of large amounts of genomic and epigenomic data, the classification feature of SVMs is expanding its use in cancer genomics, leading to the discovery of new biomarkers, new drug targets, and a better understanding of cancer driver genes. Herein we reviewed the recent progress of SVMs in cancer genomic studies. We intend to comprehend the strength of the SVM learning and its future perspective in cancer genomic applications.},
+	language = {eng},
+	number = {1},
+	journal = {Cancer Genomics \& Proteomics},
+	author = {Huang, Shujun and Cai, Nianguang and Pacheco, Pedro Penzuti and Narrandes, Shavira and Wang, Yang and Xu, Wayne},
+	year = {2018},
+	pmid = {29275361},
+	pmcid = {PMC5822181},
+	keywords = {Biomarkers, Tumor, Drug Discovery, Genes, Neoplasm, Genomics, Humans, Machine learning (ML), Neoplasms, Protein Interaction Mapping, Support Vector Machine, biomarker discovery, cancer classification, classifier, driver gene, drug discovery, gene expression, gene selection, gene-gene interaction, genomics, kernel function, review, support vector machine (SVM)},
+	pages = {41--51},
+}
+
+@article{cortes_support-vector_1995,
+	title = {Support-vector networks},
+	volume = {20},
+	issn = {1573-0565},
+	url = {https://doi.org/10.1007/BF00994018},
+	doi = {10.1007/BF00994018},
+	abstract = {Thesupport-vector network is a new learning machine for two-group classification problems. The machine conceptually implements the following idea: input vectors are non-linearly mapped to a very high-dimension feature space. In this feature space a linear decision surface is constructed. Special properties of the decision surface ensures high generalization ability of the learning machine. The idea behind the support-vector network was previously implemented for the restricted case where the training data can be separated without errors. We here extend this result to non-separable training data.},
+	language = {en},
+	number = {3},
+	urldate = {2023-06-11},
+	journal = {Machine Learning},
+	author = {Cortes, Corinna and Vapnik, Vladimir},
+	month = sep,
+	year = {1995},
+	keywords = {efficient learning algorithms, neural networks, pattern recognition, polynomial classifiers, radial basis function classifiers},
+	pages = {273--297},
+}
+
+@article{chen_random_2012,
+	title = {Random forests for genomic data analysis},
+	volume = {99},
+	issn = {0888-7543},
+	url = {https://www.sciencedirect.com/science/article/pii/S0888754312000626},
+	doi = {10.1016/j.ygeno.2012.04.003},
+	abstract = {Random forests (RF) is a popular tree-based ensemble machine learning tool that is highly data adaptive, applies to “large p, small n” problems, and is able to account for correlation as well as interactions among features. This makes RF particularly appealing for high-dimensional genomic data analysis. In this article, we systematically review the applications and recent progresses of RF for genomic data, including prediction and classification, variable selection, pathway analysis, genetic association and epistasis detection, and unsupervised learning.},
+	language = {en},
+	number = {6},
+	urldate = {2023-06-11},
+	journal = {Genomics},
+	author = {Chen, Xi and Ishwaran, Hemant},
+	month = jun,
+	year = {2012},
+	keywords = {Classification, Genomic data analysis, Prediction, Random forests, Random survival forests, Variable selection},
+	pages = {323--329},
+}
+
+@article{breiman_random_2001,
+	title = {Random {Forests}},
+	volume = {45},
+	issn = {1573-0565},
+	url = {https://doi.org/10.1023/A:1010933404324},
+	doi = {10.1023/A:1010933404324},
+	abstract = {Random forests are a combination of tree predictors such that each tree depends on the values of a random vector sampled independently and with the same distribution for all trees in the forest. The generalization error for forests converges a.s. to a limit as the number of trees in the forest becomes large. The generalization error of a forest of tree classifiers depends on the strength of the individual trees in the forest and the correlation between them. Using a random selection of features to split each node yields error rates that compare favorably to Adaboost (Y. Freund \& R. Schapire, Machine Learning: Proceedings of the Thirteenth International conference, ***, 148–156), but are more robust with respect to noise. Internal estimates monitor error, strength, and correlation and these are used to show the response to increasing the number of features used in the splitting. Internal estimates are also used to measure variable importance. These ideas are also applicable to regression.},
+	language = {en},
+	number = {1},
+	urldate = {2023-06-11},
+	journal = {Machine Learning},
+	author = {Breiman, Leo},
+	month = oct,
+	year = {2001},
+	keywords = {classification, ensemble, regression},
+	pages = {5--32},
+}
+
 @article{bewicke-copley_applications_2019,
 	title = {Applications and analysis of targeted genomic sequencing in cancer studies},
 	volume = {17},
@@ -3023,7 +3319,7 @@ Models},
 	pages = {124--128},
 }
 
-@article{svec_how_2015-1,
+@article{svec_how_2015,
 	title = {How good is a {PCR} efficiency estimate: {Recommendations} for precise and robust {qPCR} efficiency assessments},
 	volume = {3},
 	issn = {2214-7535},
@@ -4752,7 +5048,7 @@ Five publicly available gene expression cohorts comparing SIRS/trauma to sepsis 
 	pages = {694},
 }
 
-@article{mayhew_generalizable_2020-1,
+@article{mayhew_generalizable_2020,
 	title = {A generalizable 29-{mRNA} neural-network classifier for acute bacterial and viral infections},
 	volume = {11},
 	copyright = {2020 The Author(s)},
